[package]
name = "gyro"
version = "0.2.0"
authors = ["Daniel Lublin <daniel@lublin.se>"]

[dependencies]
irc = "0.13.6"
chrono = "0.4.9"
reqwest = { version = "0.9.22", features = ["socks"] }
regex = "1.3.1"
hyper = "0.12.35"
htmlescape = "0.3.1"
serde_json = "1.0.41"
git-version = "0.3.3"

[patch.crates-io]
'irc' = { git = "https://github.com/quite/irc", branch = "insecure" }
