[package]
edition = "2018"
name = "gyro"
version = "0.2.1"
authors = ["Daniel Lublin <daniel@lublin.se>"]

[dependencies]
irc = "0.13.6"
chrono = "0.4.10"
reqwest = { version = "0.10.1", features = ["socks", "blocking"] }
regex = "1.3.4"
hyper = "0.13.2"
htmlescape = "0.3.1"
serde_json = "1.0.46"
git-version = "0.3.4"

[patch.crates-io]
'irc' = { git = "https://github.com/quite/irc", branch = "insecure" }
