[package]
edition = "2018"
name = "gyro"
version = "0.3.1"
authors = ["Daniel Lublin <daniel@lublin.se>"]

[dependencies]
irc = "0.13.6"
chrono = "0.4.11"
reqwest = { version = "0.10.4", features = ["socks", "blocking"] }
regex = "1.3.6"
hyper = "0.13.4"
htmlescape = "0.3.1"
serde_json = "1.0.50"
git-version = "0.3.4"

[patch.crates-io]
'irc' = { git = "https://github.com/quite/irc", branch = "insecure" }
